<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMS Gateway</string>

    <!-- Activation Screen -->
    <string name="activation_title">הפעלת השירות</string>
    <string name="activation_explanation">כדי להתחיל להשתמש בשירות,\nיש להזין קוד הפעלה שקיבלת לאחר ההרשמה באתר.</string>
    <string name="activation_code_hint">קוד הפעלה</string>
    <string name="activation_button">הפעל</string>
    <string name="error_invalid_code">קוד ההפעלה אינו תקף</string>
    <string name="error_code_in_use">קוד זה כבר בשימוש</string>
    <string name="error_server_connection">לא ניתן להתחבר לשרת</string>

    <!-- Permission Explanation Screen -->
    <string name="permission_title">נדרש אישור הרשאות</string>
    <string name="permission_explanation">כדי שהשירות יוכל לפעול,\nיש לאפשר גישה להודעות SMS נכנסות.\n\nהאפליקציה משתמשת בהרשאה זו\nאך ורק לצורך זיהוי הודעות רלוונטיות.</string>
    <string name="permission_trust_statement">האפליקציה אינה קוראת הודעות אישיות\nואינה שולחת הודעות בשמך.</string>
    <string name="permission_grant_button">אישור הרשאות</string>
    <string name="permission_later_button">אאשר מאוחר יותר</string>
    <string name="permission_denied_message">לא ניתן להפעיל את השירות ללא הרשאת גישה להודעות SMS</string>
    <string name="permission_open_settings">פתח הגדרות</string>

    <!-- Status Screen -->
    <string name="status_title">מצב השירות</string>
    <string name="status_active">השירות פעיל</string>
    <string name="status_active_description">האפליקציה מאזינה להודעות נכנסות</string>
    <string name="status_inactive">השירות אינו פעיל</string>
    <string name="status_inactive_description">נדרש אישור הרשאות</string>
    <string name="status_device_id">מזהה מכשיר: %s</string>
    <string name="status_last_connection">חיבור אחרון: %s</string>
    <string name="status_last_connection_recent">לפני מספר דקות</string>
    <string name="status_disconnect_button">ניתוק המכשיר</string>
    <string name="status_disconnect_confirm_title">ניתוק מכשיר</string>
    <string name="status_disconnect_confirm_message">האם לנתק את המכשיר מהשירות?</string>
    <string name="dialog_yes">כן</string>
    <string name="dialog_no">לא</string>
    <string name="dialog_cancel">ביטול</string>

    <!-- Main Screen -->
    <string name="main_welcome">שלום %s!</string>
    <string name="main_status_active">השירות פעיל ומאזין להודעות</string>
    <string name="main_status_paused">השירות מושהה</string>
    <string name="main_status_no_permission">נדרשות הרשאות להפעלת השירות</string>
    <string name="main_button_pause">השהה</string>
    <string name="main_button_resume">הפעל</string>
    <string name="main_button_grant_permission">אישור הרשאות</string>
    <string name="main_settings_title">הגדרות</string>
    <string name="main_settings_permissions">הרשאות</string>
    <string name="main_settings_disconnect">ניתוק מהשירות</string>
    <string name="main_disconnect_confirm_title">ניתוק מהשירות</string>
    <string name="main_disconnect_confirm_message">האם אתה בטוח שברצונך להתנתק מהשירות?\nיהיה עליך להזין קוד הפעלה מחדש.</string>

    <!-- תפריט -->
    <string name="label_url">URL</string>
    <string name="menu_syslog">Syslog</string>
    <string name="btn_on">הפעל</string>
    <string name="btn_off">כבה</string>
    <string name="btn_close">סגור</string>
    <string name="btn_delete">מחק</string>
    <string name="btn_add">הוסף</string>
    <string name="btn_save">שמור</string>
    <string name="btn_test">בדיקה</string>
    <string name="btn_clear">נקה</string>
    <string name="btn_cancel">ביטול</string>
    <string name="error_empty_sender">שדה השולח ריק</string>
    <string name="error_wrong_url">כתובת URL שגויה</string>
    <string name="error_empty_url">כתובת URL ריקה</string>
    <string name="error_wrong_json">JSON לא תקין</string>
    <string name="error_wrong_retries_number">מספר ניסיונות לא תקין</string>

    <!-- Old MainActivity resources -->
    <string name="key_phones_preference">phones_preference</string>
    <string name="asterisk">*</string>
    <string name="any">הכל</string>
    <string name="delete_record">מחיקת רשומה</string>
    <string name="confirm_delete">האם למחוק את הרשומה?</string>
    <string name="notification_channel">SMS Gateway</string>
    <string name="permission_needed">נדרשת הרשאת SMS</string>

</resources>
